# RappiMCP_WS

./: .env.example  .mcp.json  pyproject.toml  rappi_client.py  rappi_mcp.py  requirements.txt
auth/: router.py
auth/static/: index.html
bot/: agent.py  db.py  server.py  session.py  tools.py
